--- a/index.html
+++ b/index.html
@@ -5,72 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Show Result Based on Selected Option</title>
-    <style>
-        .box {
-            background-color: beige;
-            height: 290px;
-            width: 230px;
-            border-radius: 8px;
-            box-shadow: 2px 2px 2px 2px grey;
-
-
-        }
-
-        .nav {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 93vh;
-        }
-
-        input {
-            border-radius: 5px;
-            border: 2px inset black;
-        }
-
-        input:hover {
-            color: blue;
-        }
-
-        select:hover {
-            color: green;
-        }
-
-        h5 {
-
-            animation: slide1 0.8s ease-out;
-        }
-
-        @keyframes slide1 {
-            0% {
-                transform: translateX(-100%);
-            }
-
-            100% {
-                transform: translateX(0);
-            }
-        }
-
-        #result {
-            color: black;
-            margin: right 800px;
-            text-align: center;
-            font-weight: bolder;
-
-            animation: slide 6s ease-in-out;
-
-        }
-
-        @keyframes slide {
-            0% {
-                transform: translateX(-100%);
-            }
-
-            100% {
-                transform: translateX(0);
-            }
-        }
-    </style>
+    <link href="temp.css" rel="stylesheet">
 </head>
 
 <body style="background-color:yellowgreen">
