--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="temp.css" rel="stylesheet">
 </head>
 
-<body style="background-color:yellowgreen">
+<body>
 
     <div class="nav">
 
